--- a/Bibliothèque.css
+++ b/Bibliothèque.css
@@ -44,7 +44,7 @@ header .options .inscription a:hover::after {
 .back {
     border: 2px solid #F9C349;
     border-radius: 10px;
-    width: 10%;
+    width: 110px;
     text-align: center;
     margin-left: 20px;
 }
@@ -156,3 +156,4 @@ footer {
         height: 180px;
     }
 }
+
